--- a/HMM+-based+POS+tagging-+Assignment.ipynb
+++ b/HMM+-based+POS+tagging-+Assignment.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "## POS tagging using modified Viterbi\n",
+    "## Submitted by Prachi Jain\n",
+    "## Date : 10/02/2020"
    ]
   },
   {
