--- a/HMM+-based+POS+tagging-+Assignment.ipynb
+++ b/HMM+-based+POS+tagging-+Assignment.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## POS tagging using modified Viterbi\n",
-    "## Submitted by Prachi Jain\n",
-    "## Date : 10/02/2020"
+    "## POS tagging using modified Viterbi\n"
    ]
   },
   {
